# EasyRaylib

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_hot_reload.bat  build_hot_reload.sh  build_hot_reload_debug.sh  generate_raylib_api.py
doc/hot_reload/odin_sample/: file_version_builder.odin  game.odin
src/: game.c  game.h  main.c  main_hot_reload.c  settings.c  settings.h
src/hot_reload/: file_version_builder.c  file_versions.h  file_watcher.h  platform_tools.c  platform_tools.h  raylib_api.gen.h
